bin/testsuite/tests/compiler/src/errors/compiler14.swg

#global testerror "Err0746";
0xFFFFFFFF'vfffv